--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     .section img{
         height: 250px;
     }
+    #red{
+        color: red;
+    }
   </style>
 </head>
 
@@ -73,11 +76,11 @@ My current research relates to three specific areas:
             <div>
               <p>
               <ol>
-                <li> Pann Yu Mon, Yoshiki Mikami, Myanmar Language Search Engine, International Journal of Computer Science
+                <li> <b> Pann Yu Mon</b>, Yoshiki Mikami, Myanmar Language Search Engine, International Journal of Computer Science
                   Issues, Vol. 8, Issue 2, pp.118～126, March 2011, ISSN (Online) : 1694-0814
                 </li>
                 <li>
-                  Pann Yu Mon, Chew Yew Choong, Yoshiki Mikami, Language Specific Crawler for Myanmar Web Pages, International
+                    <b>Pann Yu Mon</b>, Chew Yew Choong, Yoshiki Mikami, Language Specific Crawler for Myanmar Web Pages, International
                   Journal of Computer Science Issues, Vol. 8, Issue 2, pp.127～135, March 2011, ISSN (Online) : 1694-0814
                 </li>
                         
@@ -90,29 +93,29 @@ My current research relates to three specific areas:
               <p>
               <ol>
                 <li>
-                    Pann Yu Mon, Shuta Ueno, Gengo Suzuki, Naoyuki Karasawa, Keitaro Horikawa, Masahiro Nishikawa, Masahiro Awaji, Tetsuaki Isonishi, Implementation of cooperative and work-integrated education at “Professional University” in Japan: Case studies of Faculty of Information, Kaishi Professional University, 
+                    <b>Pann Yu Mon</b>, Shuta Ueno, Gengo Suzuki, Naoyuki Karasawa, Keitaro Horikawa, Masahiro Nishikawa, Masahiro Awaji, Tetsuaki Isonishi, Implementation of cooperative and work-integrated education at “Professional University” in Japan: Case studies of Faculty of Information, Kaishi Professional University, 
                     WACE The 4th International Research Symposium, Kanazawa Institute of Technology, Japan, September 2022.
                   </li>
                 <li>
-                    Pann Yu Mon, Maung Maung Thant, Ohnmar Htun, Yoshiki Mikami, Statistical Analysis of Myanmar Words on the
+                    <b>Pann Yu Mon</b>, Maung Maung Thant, Ohnmar Htun, Yoshiki Mikami, Statistical Analysis of Myanmar Words on the
                     World Wide Web for Search Engine Development, International Conference on Computer Application (ICCA-2009),
                     Yangon, Myanmar, March 2009, pp.219～224.
                   </li>
                   <li>
-                    Arai Yuki, Pann Yu Mon, T.Nakahira Katsuko, Mikami Yoshiki, Efficient language focused crawler using
+                    Arai Yuki, <b>Pann Yu Mon</b>, T.Nakahira Katsuko, Mikami Yoshiki, Efficient language focused crawler using
                     alternative language identification methods. (IPSJ-2008)
                   </li>
                   <li>
-                    Pann Yu Mon, Yoshiki Mikami, Language Specific Crawler for Myanmar Web pages, International Conference on
+                    <b>Pann Yu Mon</b>, Yoshiki Mikami, Language Specific Crawler for Myanmar Web pages, International Conference on
                     Human and Computer (HC-2008), Nagaoka, Japan, November 2010, pp.271～276.
                   </li>
                   <li>
-                    Pann Yu Mon, Yoshiki Mikami, Myanmar Language Search Engine, International Conference on Advances in ICT for
+                    <b>Pann Yu Mon</b>, Yoshiki Mikami, Myanmar Language Search Engine, International Conference on Advances in ICT for
                     Emerging Regions (ICTer-2010), Colombo, Srilanka, September 2010, pp.69～74.
                   </li>
                   <li>
-                    Pann Yu Mon, Yoshiki Mikami, Myanmar Web Pages Indexer with an Enhanced Dictionary, International Conference
-                    on Computer Application (ICCA-2011), Yangon, Myanmar. April 2011..
+                    <b>Pann Yu Mon</b>, Yoshiki Mikami, Myanmar Web Pages Indexer with an Enhanced Dictionary method, International Conference
+                    on Computer Application (ICCA-2011), Yangon, Myanmar. April 2011.
                   </li>                        
               </ol>
               </p>
@@ -121,12 +124,12 @@ My current research relates to three specific areas:
                 <div>
                   <p>
                   <ol>
-                    <li> Yoshiki Mikamai, Shigeaki Kodama, Chew Yew Choong, Pann Yu Mon, Ohnmar Htun, Tin Htay Hlaing, Measuring linguistic diversity in the Web, 
+                    <li> Yoshiki Mikamai, Shigeaki Kodama, Chew Yew Choong, <b>Pann Yu Mon</b>Pann Yu Mon, Ohnmar Htun, Tin Htay Hlaing, Measuring linguistic diversity in the Web, 
                         NET.LANG, Towards the multilingual cyberspace, UNESCO, January 2011. 
 
                     </li>
                     <li>
-                        Pann Yu Mon, Madhukara Phatak, Complexities of Asian language queries in search engines: A Case Study, NET.LANG, Towards the multilingual 
+                        <b>Pann Yu Mon</b>, Madhukara Phatak, Complexities of Asian language queries in search engines: A Case Study, NET.LANG, Towards the multilingual 
                         cyberspace, UNESCO, January 2011.
                     </li>
                             
