--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8" />
-    <title>5-4-1 タブメニュー</title>
+    <title>Pann Yu Mon</title>
 <meta name="description"  content="書籍「動くWebデザインアイディア帳」のサンプルサイトです">
 
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
