--- a/index.html
+++ b/index.html
@@ -148,8 +148,10 @@ My current research relates to three specific areas:
     <div id="teaching" class="area">
       <h2>Major</h2>
       <ul>
+        <li>Introduction to Programming I (Python) (Class ID : 20PRG20427) </li>
         <li>Web Development Course (Class ID : 20PRG20421) </li>
         <li>Comprehensive ICT utilization Course (Class ID : 20PBL4032r) </li>
+        <li>Introduction to Programming II (Java) (Class ID : 20PBL4033r) </li>
         <li>Clinical practice training I (Class ID : 20PBL30221) </li>
         <li>Clinical practice training II (Class ID : 20PBL20121) </li>
         
